--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
 
 
   flutter_bluetooth_serial: ^0.4.0
+  crclib: ^3.0.0
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
