--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  # Platform plugins
+  flutter_foreground_task: ^3.8.2
   flutter_bluetooth_serial: ^0.4.0
+
+  # Logic libs
   crclib: ^3.0.0
   collection: ^1.16.0
 
