--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Logic libs
   crclib: ^3.0.0
   collection: ^1.16.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
