--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - sluchaweczki.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
