--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = freebuddy
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.freebuddy
+PRODUCT_BUNDLE_IDENTIFIER = com.lastgimbus.the.freebuddy
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
