--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_foreground_task: ^3.8.2
   flutter_bluetooth_serial: ^0.4.0
   app_settings: ^4.1.8
+  url_launcher: ^6.1.5
 
   # Logic libs
   crclib: ^3.0.0
