--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   crclib: ^3.0.0
   collection: ^1.16.0
   flutter_bloc: ^8.1.1
+  logger: ^1.1.0
 
   # Flutter/ui stuff
   flutter_localizations:
