--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,17 +67,13 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    flavorDimensions "signing"
     buildTypes {
         release {
-            productFlavors {
-                signingDefault {
-                    isDefault true
-                    signingConfig signingConfigs.release
-                }
-                signingDebug {
-                    signingConfig signingConfigs.debug
-                }
+            if (keystorePropertiesFile.exists()) {
+                signingConfig signingConfigs.release
+            } else {
+                println "No key.properties found - Signing with debug keys"
+                signingConfig signingConfigs.debug
             }
         }
         debug {
