--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   logger: ^1.1.0
   provider: ^6.0.3
   streaming_shared_preferences: ^2.0.0
+  async: ^2.9.0
 
   # Flutter/ui stuff
   flutter_localizations:
