Abstract away connection in headphones impl
This gives us easy way to test things :tada:

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   # Logic libs
   crclib: ^3.0.0
   collection: ^1.16.0
+  stream_channel: ^2.1.0
   flutter_bloc: ^8.1.1
   logger: ^1.1.0
   provider: ^6.0.4
