Update donation options

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,6 @@
-custom: https://www.paypal.me/TheLastGimbus
+# My donation options
+
+github: TheLastGimbus
+ko_fi: thelastgimbus
+liberapay: TheLastGimbus
+custom: [ "https://www.paypal.com/donate/?hosted_button_id=B8LS5DS92EPQE" ]
