--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - sluchaweczki.png
+    - "assets/sluchaweczki.png"
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
