--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.0.5
   streaming_shared_preferences: ^2.0.0
   async: ^2.10.0
+  rxdart: ^0.27.7
 
   # Flutter/ui stuff
   flutter_localizations:
