make main page prettier and use less fun icon
sorry, me :( i think it scares people :(

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,7 +97,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - "assets/sluchaweczki.png"
+    - "assets/app_icons/ic_launcher.png"
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
