--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     # path: "../the_last_bluetooth"
   app_settings: ^4.2.0
   url_launcher: ^6.1.8
+  permission_handler: ^10.2.0
 
   # Logic libs
   crclib: ^3.0.0
