--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -28,9 +28,9 @@ jobs:
         run: flutter build apk --target-platform android-arm64
       - name: Rename apk
         # Clean branch name: https://stackoverflow.com/a/58034787
-        run: mv build/app/outputs/flutter-apk/app-release.apk ./FreeBuddy-nightly-${GITHUB_REF#refs/heads/}.apk
+        run: mv ./build/app/outputs/flutter-apk/app-release.apk ./FreeBuddy-nightly.apk
       - name: Upload apk as artifact
         uses: actions/upload-artifact@v3
         with:
-          path: ./FreeBuddy-nightly-${GITHUB_REF#refs/heads/}.apk
+          path: ./FreeBuddy-nightly.apk
           if-no-files-found: error
