--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,8 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 33
+    namespace 'com.lastgimbus.the.freebuddy'
+    compileSdk 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
