--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.0
+  material_color_utilities: ^0.5.0
+
+dependency_overrides:
+  material_color_utilities: ^0.5.0
 
 dev_dependencies:
   flutter_test:
