--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.1.11
   permission_handler: ^10.3.0
   dynamic_color: ^1.6.5
+  home_widget: ^0.2.1
 
   # Logic libs
   crclib: ^3.0.0
