--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.0
   material_color_utilities: ^0.5.0
+  screenshot: ^2.1.0
 
 dependency_overrides:
   material_color_utilities: ^0.5.0
