use compose glance ✨

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,12 +34,20 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     namespace 'com.lastgimbus.the.freebuddy'
-    compileSdk 33
+    compileSdk 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.3"
     }
 
     kotlinOptions {
@@ -92,4 +100,11 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // All of this for AppWidgets support
+    implementation "androidx.compose.runtime:runtime:1.5.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.5.1"
+    implementation "androidx.compose.runtime:runtime-rxjava2:1.5.1"
+    implementation "androidx.glance:glance-appwidget:1.0.0"
+    implementation "androidx.glance:glance-material3:1.0.0"
 }
