--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService"/>
 
         <receiver
-            android:name=".BatteryWidgetProvider"
+            android:name=".BatteryWidgetReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
