--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,4 +107,5 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-rxjava2:1.5.1"
     implementation "androidx.glance:glance-appwidget:1.0.0"
     implementation "androidx.glance:glance-material3:1.0.0"
+    implementation 'androidx.compose.ui:ui-unit-android:1.5.1'
 }
