--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,24 +31,25 @@ dependencies:
     sdk: flutter
 
   # Platform plugins
-  flutter_foreground_task: ^4.1.0
+  #  flutter_foreground_task: ^4.1.0 - not using it really yet
   the_last_bluetooth:
     git:
       url: https://github.com/TheLastGimbus/the_last_bluetooth.git
       ref: master
     # path: "../the_last_bluetooth"
-  app_settings: ^4.2.0
-  url_launcher: ^6.1.11
-  permission_handler: ^10.3.0
-  dynamic_color: ^1.6.5
+  app_settings: ^5.0.0
+  url_launcher: ^6.1.14
+  permission_handler: ^11.0.0
+  dynamic_color: ^1.6.7
   home_widget: ^0.3.0
 
   # Logic libs
   crclib: ^3.0.0
-  collection: ^1.17.1
+  ## These two conflict with, as always, flutter_test
+  collection: ^1.17.2
   stream_channel: ^2.1.1
   flutter_bloc: ^8.1.3
-  logger: ^1.4.0
+  logger: ^2.0.2
   provider: ^6.0.5
   streaming_shared_preferences: ^2.0.0
   async: ^2.11.0
@@ -57,22 +58,26 @@ dependencies:
   # Flutter/ui stuff
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.0
-  material_color_utilities: ^0.5.0
+  intl: ^0.18.1
+  ## This is low-level, but I *do* use it to mix colors here and there
+  material_color_utilities: ^0.8.0
   screenshot: ^2.1.0
 
 dependency_overrides:
-  material_color_utilities: ^0.5.0
+  ## flutter_test, as always...
+  material_color_utilities: ^0.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  ## When updating stuff here, it conflicts with fms
+  ## TODO: Replace fms: https://github.com/fujidaiti/fms/issues/3
   flutter_launcher_icons: ^0.12.0
   flutter_native_splash: ^2.3.1
   fms: ^0.9.2
 
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.3
 
 
 # Run with:
