--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,4 +108,8 @@ dependencies {
     implementation "androidx.glance:glance-appwidget:1.0.0"
     implementation "androidx.glance:glance-material3:1.0.0"
     implementation 'androidx.compose.ui:ui-unit-android:1.5.1'
+
+    // this is to manually launch our routine update - same version as workmanager plugin 0.5.1
+    def work_version = "2.7.1"
+    implementation "androidx.work:work-runtime:$work_version"
 }
