--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,6 +121,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - "assets/app_icons/ic_launcher.png"
+    - "assets/app_icons/freebuds_pro_one.png"
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
