--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,6 +110,11 @@ dependencies {
     implementation 'androidx.compose.ui:ui-unit-android:1.5.1'
 
     // this is to manually launch our routine update - same version as workmanager plugin 0.5.1
-    def work_version = "2.7.1"
-    implementation "androidx.work:work-runtime:$work_version"
+    def work_version = "2.8.1"
+    implementation("androidx.work:work-runtime").version {
+        strictly("2.8.1")
+    }
+    implementation("androidx.work:work-runtime-ktx").version {
+        strictly("2.8.1")
+    }
 }
