--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -16,6 +16,7 @@ linter:
     - close_sinks
     - unnecessary_statements
     - literal_only_boolean_expressions
+    - dangling_library_doc_comments: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
