--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,11 +12,11 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    - prefer_relative_imports
-    - close_sinks
-    - unnecessary_statements
-    - literal_only_boolean_expressions
-    - dangling_library_doc_comments: false
+    prefer_relative_imports: true
+    close_sinks: true
+    unnecessary_statements: true
+    literal_only_boolean_expressions: true
+    dangling_library_doc_comments: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
