--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,10 +7,8 @@
     <!--    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />-->
     <!--    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />-->
 
-    <!-- Request legacy Bluetooth permissions on older devices. -->
-    <uses-permission
-        android:name="android.permission.BLUETOOTH"
-        android:maxSdkVersion="30" />
+    <!-- Request legacy Bluetooth permissions on ekhm ALL devices, thx xiaomi ;) -->
+    <uses-permission android:name="android.permission.BLUETOOTH" tools:remove="android:maxSdkVersion" />
     <!-- Needed only if your app communicates with already-paired Bluetooth devices. -->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
